# akincraft

./: .gitignore  CONTRIBUTING.md  ENGINE_SPEC.md  LICENSE  README.md  SYSTEMS_SUMMARY.md  akincraft.sln
.github/workflows/: ci.yml  deploy-pages.yml
assets/: screenshot-placeholder.txt
cpp/: CMakeLists.txt  README.md
cpp/src/: App.cpp  App.h  Biome.cpp  Biome.h  BlockType.h  Chunk.cpp  Chunk.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Item.cpp  Item.h  PlayerStats.cpp  PlayerStats.h  Renderer.cpp  Renderer.h  StartScreen.cpp  StartScreen.h  Tool.cpp  Tool.h  Weather.cpp  Weather.h  World.cpp  World.h
docs/: AKINCRAFT_FEATURES.md  API_REFERENCE.md  COMPLETE_IMPLEMENTATION.md  CUSTOMIZATION.md  INTEGRATION_GUIDE.md  MINECRAFT_ENHANCEMENT_GUIDE.md  README.md  development-guide.html  index.html  modding-guide.html
java/: README.md  build.gradle.kts  settings.gradle.kts
java/saves/world_0/: player.json
java/src/main/java/akincraft/: App.java
java/src/main/java/akincraft/entity/: Creeper.java  Entity.java  EntityManager.java  EntityTypes.java  MobSpawner.java  PassiveEntity.java  Zombie.java
java/src/main/java/akincraft/examples/: AkinraftGameExample.java
java/src/main/java/akincraft/game/: AdvancedCrafting.java  BlockInteractionSystem.java  BlockRegistry.java  CombatSystem.java  Container.java  (+25 more)
website/: Program.cs
website/Pages/: Blocks.cshtml  Blocks.cshtml.cs  Error.cshtml.cs  Features.cshtml  Features.cshtml.cs  Index.cshtml  Index.cshtml.cs  Privacy.cshtml.cs
website/Pages/Shared/: _Layout.cshtml
website/wwwroot/css/: site.css
(+22 files in other folders)
